- (FEAT) replicate is now mtime aware
- (FEAT) support F11 fence-agent paths
- (FEAT) bringing back the koan live CD
- (FEAT) koan live CD can go interactive if no profile is specified and system autodiscovery fails
- (BUGF) koan autodetection now can gather MACs/IPs for bridged interfaces better
- (BUGF) don't use -m option for drac unless power_id is set

- ... - 1.6.5
- (BUGF) don't use json on python x<=2.3 since we know it's simplejson x<2.0, which has unicode issues
- (FEAT) support F-11 imports
- (BUGF) don't add koan virtual interfaces for vlan tagged interfaces
- (BUGF) pair PAE and non-PAE content in imports better 
- (BUGF) don't try to scp /etc/cobbler/*.ks on replicate, this is an old path
- (BUGF) set proper umask on .mtime files
- (BUGF) fix koan error with unspecified arch using --kexec
- (BUGF) don't use --onboot=on in network config for kickstart for RHEL 3.

- Fri May 8 2009 - 1.6.4
- (BUGF) empty nameserver search paths now don't screw up resolv.conf
- (BUGF) unicode fix for --template-files feature
- (BUGF) mod python input fix for repo/profile associations in webapp
- (BUGF) change "hostname" to "option hostname" in dhcp.template
- (BUGF) fixes for unicode problem with Cheetah, repos, and json
- (BUGF) unicode fix for --template-files feature
- (BUGF) another unicode fix
- (BUGF) bonding interface setup for RHEL4 now works
- (BUGF) generate DHCP info even if netboot is disabled
- (BUGF) Change to network_config snippet to ignore bond masters to prevent anaconda failures when MAC addresses are not specified
- (BUGF) fix to CLI rename deleting subobjects via cobblerd (important!)
- (BUGF) fix blender cache problem with using dnsnames instead of record names (ISC DHCP management)
- (BUGF) quote host name in stock ISC template

- XXX - 1.6.3
- (BUGF) import with datestamp 0 when .discinfo is not found, do not crash
- (BUGF) various fixes to "cobbler report" when using non-standard formats
- (BUGF) rename with same name does not delete